tests/ui/reborrow/coerce-shared-omitted-reborrow-field-locked.stderr
error: implementing `CoerceShared` does not allow multiple lifetimes or fields to be coerced
  --> $DIR/coerce-shared-omitted-reborrow-field-locked.rs:34:13
   |
LL | impl<'a, T> CoerceShared<OmitRef<'a, T>> for OmitMut<'a, T> {}
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

